Ready for primetime